--- a/projects/principal/src/index.html
+++ b/projects/principal/src/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <title>Principal</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
